Add Admin Competitor Results Menu (#13530)
* Add ResultsMenu

* send websocket updates for quitters

* add pendingQuitCompetitors to state

* delete attempts in update_live_result_job

* remove .expect because empty array is valid

* set the next person of the previous round to advancing if wanted

* make pendingQuitCompetitors optional

* lint

* new test with should_advance_next

* add tests and fix logic

* add checking for the specific hash to test

* add tests for newly created results

* lint

* refactor diff helper for easier testing

* fix test

* add a next_qualifying_to_round method and add tests for that method

* fix merge

* start working on refactoring methods

* review changes

* more refactoring

* refactor logic to assume that everyone who quit got dnf and then reuse logic from recompute_advancing

* remove unused method

* add GetNextCompetitorIfQuit route

* changes after merge

* revert changes to advancement_condition.rb

* use LiveResult::WORST_POSSIBLE_SCORE

* fix the compression key test

* review changes

* change quitting api to take an array of advancing ids

* rubocop

* add clearing test

* fix job and merge

* add clear route

* rubocop
