# next-frontend/openapi/wcaCore.yaml
@@ -26,10 +26,16 @@ paths:
       $ref: 'paths/competitions/live/UpdateLiveResults.yaml'
     get:
       $ref: 'paths/competitions/live/LiveResultsByRound.yaml'
+  /v1/competitions/{competitionId}/live/rounds/{roundId}/next_if_quit:
+    $ref: 'paths/competitions/live/GetNextCompetitorIfQuit.yaml'
   /v1/competitions/{competitionId}/live/rounds/{roundId}/clear:
     $ref: 'paths/competitions/live/ClearRound.yaml'
   /v1/competitions/{competitionId}/live/rounds/{roundId}/open:
     $ref: 'paths/competitions/live/OpenRound.yaml'
+  /v1/competitions/{competitionId}/live/rounds/{roundId}/{registrationId}:
+    $ref: 'paths/competitions/live/QuitCompetitor.yaml'
+  /v1/competitions/{competitionId}/live/rounds/{roundId}/{registrationId}/clear:
+    $ref: 'paths/competitions/live/ClearCompetitor.yaml'
   /v1/competitions/{competitionId}/live/podiums:
     $ref: 'paths/competitions/live/LivePodiums.yaml'
   /v1/competitions/{competitionId}/live/registrations/{registrationId}:
